delete objectifcourse controller, create different controller

--- a/app/Resources/views/course_info/layout.html.twig
+++ b/app/Resources/views/course_info/layout.html.twig
@@ -59,7 +59,7 @@
                 <li class="nav-item has-treeview">
                     <a class="nav-link menu-tab"
                        id="menu-objectives-course"
-                       href="{{ path('objectives.index', { 'id': courseInfo.id }) }}">
+                       href="{{ path('app.course_info.objectives.index', { 'id': courseInfo.id }) }}">
                         <i class="fas fa-bullseye"></i>
                         <p>Objectifs du cours</p>
                     </a>
