--- a/app/Resources/views/course_info/objectives_course/form/assist_tutoring.html.twig
+++ b/app/Resources/views/course_info/objectives_course/form/assist_tutoring.html.twig
@@ -1,4 +1,4 @@
-{{ form_start(form, {'attr': {'class': 'modal-action-form', 'data-action-url': path('objective_course_tutoring_form', {'id': courseInfo.id }), 'data-card': 'card-tutoring-resources'}}) }}
+{{ form_start(form, {'attr': {'class': 'modal-action-form', 'data-action-url': path('app.course_info.tutoring.create', {'id': courseInfo.id }), 'data-card': 'card-tutoring-resources'}}) }}
 {{ form_errors(form) }}
 <div class="row mt-3">
     <div class="col">
