--- a/app/Resources/views/course_info/objectives_course/view/tutoring_resources.html.twig
+++ b/app/Resources/views/course_info/objectives_course/view/tutoring_resources.html.twig
@@ -4,7 +4,7 @@
         <input type="checkbox" data-toggle="toggle" data-style="ios" id="btn_tutoring" data-on="Oui"
                data-off="Non"
                data-action-title="Ajouter une séance de tutorat"
-               data-action-url="{{ path('objective_course_tutoring_form', {'id': courseInfo.id }) }}"
+               data-action-url="{{ path('app.course_info.tutoring.create', {'id': courseInfo.id }) }}"
                 {% if courseInfo.tutoring %}
                     checked
                 {% endif %}
@@ -16,7 +16,7 @@
             class="btn btn-link modal-action p-0 position-absolute"
             style="top: 0px; right: 0px"
             data-action-title="Ajouter une compétence"
-            data-action-url="{{ path('objective_course_tutoring_form', {'id': courseInfo.id }) }}">
+            data-action-url="{{ path('app.course_info.tutoring.create', {'id': courseInfo.id }) }}">
         <i class="fas fa-edit"></i>
     </button>
     <div class="mr-4">
@@ -63,7 +63,7 @@
             <th class="text-center" style="width: 20%">Modifier/Supprimer</th>
         </tr>
         </thead>
-        <tbody id="tutoring-resources-list" class="list-sortable" data-url="{{ path('objective_course_sort_tutoring_resources', {'id': courseInfo.id}) }}">
+        <tbody id="tutoring-resources-list" class="list-sortable" data-url="{{ path('app.course_info.objectives.sort_tutoring_resources', {'id': courseInfo.id}) }}">
         {% for tutoringResources in courseInfo.courseTutoringResources %}
             <tr class="item-sortable text-center" data-id="{{ tutoringResources.id }}">
                 <td class="text-left">{{ tutoringResources.description }}</td>
@@ -71,12 +71,12 @@
                     <button type="button"
                             class="btn btn-link modal-action p-0"
                             data-action-title="Modifier une remédiation"
-                            data-action-url="{{ path('objective_course_edit_tutoring_resources', {'id': courseInfo.id, 'tutoringResourcesId': tutoringResources.id}) }}">
+                            data-action-url="{{ path('app.course_info.tutoring_resource.edit', {'id': tutoringResources.id}) }}">
                         <i class="fas fa-edit"></i>
                     </button>
                     <button type="button" class="btn btn-link modal-action p-0"
                             data-action-title="Supprimer une remédiation"
-                            data-action-url="{{ path('objective_course_remove_tutoring_resources', {'id': courseInfo.id, 'tutoringResourcesId': tutoringResources.id}) }}">
+                            data-action-url="{{ path('app.course_info.tutoring_resource.delete', {'id': tutoringResources.id}) }}">
                         <i class="fas fa-trash-alt text-danger"></i>
                     </button>
                 </td>
