teaching mode front change

--- a/app/Resources/views/course_info/presentation/form/_teaching_mode_class.html.twig
+++ b/app/Resources/views/course_info/presentation/form/_teaching_mode_class.html.twig
@@ -1,5 +1,5 @@
 <div class="teaching-mode teaching-mode-class d-none">
-    <label{{ 'app.presentation.form.teaching_mode.additionnal' | trans }}></label>
+    <label>{{ 'app.presentation.form.teaching_mode.additionnal' | trans }}</label>
     {{ form_errors(form.teachingOtherTypeClass) }}
     <div class="row">
         <div class="col-sm" style="max-width: 120px;">
