--- a/app/Resources/views/course_info/presentation/view/_teaching_type_card.html.twig
+++ b/app/Resources/views/course_info/presentation/view/_teaching_type_card.html.twig
@@ -6,7 +6,7 @@
         <i class="fas fa-clock"></i>
     </span>
     <div class="info-box-content">
-        <span class="info-box-text">{{ teachingTypeText }}</span>
+        <span class="info-box-text">{{ teachingTypeText | trans }}</span>
         <span class="info-box-number">{{ teachingTypeHours }}H</span>
     </div>
 </div>
