--- a/app/Resources/views/course_info/presentation/form/teaching_mode.html.twig
+++ b/app/Resources/views/course_info/presentation/form/teaching_mode.html.twig
@@ -3,17 +3,17 @@
 <div class="row mb-3">
     {% if courseInfo.teachingCmClass is not null %}
         <div class="col-md-4 col-sm-6 col-12">
-            {% include 'course_info/presentation/view/_teaching_type_card.html.twig' with {'teachingTypeText': 'Cours Magistraux', 'teachingTypeHours': courseInfo.teachingCmClass } %}
+            {% include 'course_info/presentation/view/_teaching_type_card.html.twig' with {'teachingTypeText': 'app.presentation.form.teaching_mode.cm', 'teachingTypeHours': courseInfo.teachingCmClass } %}
         </div>
     {% endif %}
     {% if courseInfo.teachingTdClass is not null %}
         <div class="col-md-4 col-sm-6 col-12">
-            {% include 'course_info/presentation/view/_teaching_type_card.html.twig' with {'teachingTypeText': 'Travaux Dirigés', 'teachingTypeHours': courseInfo.teachingTdClass } %}
+            {% include 'course_info/presentation/view/_teaching_type_card.html.twig' with {'teachingTypeText': 'app.presentation.form.teaching_mode.td', 'teachingTypeHours': courseInfo.teachingTdClass } %}
         </div>
     {% endif %}
     {% if courseInfo.teachingTpClass is not null %}
         <div class="col-md-4 col-sm-6 col-12">
-            {% include 'course_info/presentation/view/_teaching_type_card.html.twig' with {'teachingTypeText': 'Travaux Pratiques', 'teachingTypeHours': courseInfo.teachingTpClass } %}
+            {% include 'course_info/presentation/view/_teaching_type_card.html.twig' with {'teachingTypeText': 'app.presentation.form.teaching_mode.tp', 'teachingTypeHours': courseInfo.teachingTpClass } %}
         </div>
     {% endif %}
 </div>
@@ -26,136 +26,12 @@
         <label class="required font-weight-bold">{{ 'app.presentation.form.teaching_mode.label' | trans }}</label>
         {{ form_row(form.teachingMode, {label_attr: {class: 'radio-custom'} }) }}
     </div>
-    <div class="col-md-7">
-        {% include 'course_info/presentation/form/_teaching_mode_class.html.twig' %}
-        {% include 'course_info/presentation/form/_teaching_mode_distant.html.twig' %}
-    </div>
 </div>
 
-
-
-
 <div class="row mt-3">
-    <div class="col">
-        <div class="row mb-2">
-            <div class="col-5">
-                {{ form_row(form.teachingMode, {label_attr: {class: 'radio-custom'} }) }}
-            </div>
-            <div class="col-7">
-                <div class="row mb-2">
-                    <div class="col">
-                        {{ form_widget(form.teachingCmClass) }}
-                    </div>
-                </div>
-                <div class="row mb-2">
-                    <div class="col">
-                        {{ form_widget(form.teachingTdClass) }}
-                    </div>
-                </div>
-                <div class="row mb-2">
-                    <div class="col">
-                        {{ form_widget(form.teachingTpClass) }}
-                    </div>
-                </div>
-            </div>
-        </div>
-
-        <div class="row teaching-mode teaching-mode-class d-none">
-            <div class="col">
-                {{ form_errors(form.teachingOtherTypeClass) }}
-                <div class="row mb-2">
-                    <div class="col pr-1">
-                        {{ form_widget(form.teachingOtherClass) }}
-                    </div>
-                    <div class="col pl-1">
-                        {{ form_widget(form.teachingOtherTypeClass) }}
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="row teaching-mode teaching-mode-distant d-none">
-            <div class="col">
-                <div class="row mb-2">
-                    <div class="col">
-                        {{ form_widget(form.teachingCmDist) }}
-                    </div>
-                </div>
-                <div class="row mb-2">
-                    <div class="col">
-                        {{ form_widget(form.teachingTdDist) }}
-                    </div>
-                </div>
-                {{ form_errors(form.teachingOtherTypeDist) }}
-                <div class="row mb-2">
-                    <div class="col pr-1">
-                        {{ form_widget(form.teachingOtherDist) }}
-                    </div>
-                    <div class="col pl-1">
-                        {{ form_widget(form.teachingOtherTypeDist) }}
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="teaching-mode teaching-mode-hybrid d-none">
-            <div class="row mb-2">
-                <div class="col">
-                    <h4 class="mb-2">{{ 'app.presentation.form.teaching_mode.class' | trans }}</h4>
-                </div>
-                <div class="col">
-                    <h4 class="mb-2">{{ 'app.presentation.form.teaching_mode.distant' | trans }}</h4>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col">
-                    <div class="row mb-2">
-                        <div class="col">
-                            {{ form_widget(form.teachingCmHybridClass) }}
-                        </div>
-                    </div>
-                    <div class="row mb-2">
-                        <div class="col">
-                            {{ form_widget(form.teachingTdHybridClass) }}
-                        </div>
-                    </div>
-                    <div class="row mb-2">
-                        <div class="col">
-                            {{ form_widget(form.teachingTpHybridClass) }}
-                        </div>
-                    </div>
-                    {{ form_errors(form.teachingOtherTypeHybridClass) }}
-                    <div class="row mb-2">
-                        <div class="col pr-1">
-                            {{ form_widget(form.teachingOtherHybridClass) }}
-                        </div>
-                        <div class="col pl-1">
-                            {{ form_widget(form.teachingOtherTypeHybridClass) }}
-                        </div>
-                    </div>
-                </div>
-                <div class="col">
-                    <div class="row mb-2">
-                        <div class="col">
-                            {{ form_widget(form.teachingCmHybridDist) }}
-                        </div>
-                    </div>
-                    <div class="row mb-2">
-                        <div class="col">
-                            {{ form_widget(form.teachingTdHybridDist) }}
-                        </div>
-                    </div>
-                    <div class="row mb-2">
-                        {{ form_errors(form.teachingOtherTypeHybridDistant) }}
-                        <div class="col pr-1">
-                            {{ form_widget(form.teachingOtherHybridDist) }}
-                        </div>
-                        <div class="col pl-1">
-                            {{ form_widget(form.teachingOtherTypeHybridDistant) }}
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
+    {% include 'course_info/presentation/form/_teaching_mode_class.html.twig' %}
+    {% include 'course_info/presentation/form/_teaching_mode_distant.html.twig' %}
+    {% include 'course_info/presentation/form/_teaching_mode_hybrid.html.twig' %}
 </div>
 
 <div class="mt-2">
@@ -171,7 +47,6 @@
 
 <script>
     $(document).ready(function () {
-
         let $teachingMode = $('#teaching_mode_teachingMode');
 
         /**
@@ -179,7 +54,6 @@
          */
         function toggleTeachingMode() {
             let mode = $teachingMode.find('input[type="radio"]:checked').val();
-            console.log(mode);
 
             $('.teaching-mode').addClass('d-none');
             $('.teaching-mode-' + mode).removeClass('d-none');
