--- a/app/Resources/views/course_info/layout.html.twig
+++ b/app/Resources/views/course_info/layout.html.twig
@@ -88,7 +88,7 @@
                     </a>
                 </li>
                 <li class="nav-item menu-tab has-treeview">
-                    <a class="nav-link" href="{{ path('course_closing_remarks_index', { 'id': courseInfo.id }) }}"
+                    <a class="nav-link" href="{{ path('app.course_info.closing_remarks.index', { 'id': courseInfo.id }) }}"
                        id="menu-closing_remarks">
                         <i class="fas fa-flag-checkered"></i>
                         <p>Le mot de la fin</p>
