--- a/app/Resources/views/course_info/closing_remarks/form/closing_remarks.html.twig
+++ b/app/Resources/views/course_info/closing_remarks/form/closing_remarks.html.twig
@@ -17,11 +17,11 @@
 </div>
 <div class="mt-2">
     <button type="submit" class="submit-button btn btn-primary submit rounded"
-            data-url="{{ path('course_closing_remarks_message_view', {'id': courseInfo.id, 'action': 'submit' }) }}">
+            data-url="{{ path('app.course_info.closing_remarks.closing_remarks', {'id': courseInfo.id, 'action': 'submit' }) }}">
         Sauvegarder
     </button>
     <button type="button" class="cancel-button btn btn-secondary rounded"
-            data-url="{{ path('course_closing_remarks_message_view', {'id': courseInfo.id, 'action': 'cancel' }) }}">
+            data-url="{{ path('app.course_info.closing_remarks.closing_remarks', {'id': courseInfo.id, 'action': 'cancel' }) }}">
         Annuler
     </button>
 </div>
