Refacto + secure Structure controller

--- a/app/Resources/views/domain/index.html.twig
+++ b/app/Resources/views/domain/index.html.twig
@@ -34,7 +34,7 @@
             </div>
 
             {% if pagination.totalItemCount > 0 %}
-                <table class="table table-bordered table-responsive-sm">
+                <table class="table table-hover table-responsive-sm">
                     <thead>
                     <tr>
                         <th class="sortable">{{ knp_pagination_sortable(pagination, 'app.form.activity.label.label'|trans, 'a.label') }}</th>
