--- a/app/Resources/views/equipment/index.html.twig
+++ b/app/Resources/views/equipment/index.html.twig
@@ -28,7 +28,7 @@
             </div>
 
             {% if pagination.totalItemCount > 0 %}
-                <table class="table table-bordered table-responsive-sm">
+                <table class="table table-hover table-responsive-sm">
                     <thead>
                     <tr>
                         <th class="sortable">{{ knp_pagination_sortable(pagination, 'app.form.equipment.label.label'|trans, 'e.label') }}</th>
