--- a/app/Resources/views/partial/_admin_sidebar.html.twig
+++ b/app/Resources/views/partial/_admin_sidebar.html.twig
@@ -38,160 +38,166 @@
         </li>
 
         {% set referentielLink = ['app.admin.activity.', 'app.admin.activity_type.', 'app.admin.activity_mode.','app.admin.year.',
-            'app.admin.equipment', 'app_admin.structure', 'app.admin.domain.', 'app.admin.period.index', 'app.admin.language.',
-            'app.admin.campus.', 'app_admin.achievement', 'app_admin.course_info_field_index'] %}
-        <li class="nav-item has-treeview {{ printActiveAdminSidebarLink(referentielLink) ? 'menu-open' }}">
-            <a href="#" class="nav-link {{ printActiveAdminSidebarLink(referentielLink) }}">
-                <i class="nav-icon fas fa-book"></i>
-                <p>
-                    Référentiel
-                    <i class="right fas fa-angle-left"></i>
-                </p>
-            </a>
-            <ul class="nav nav-treeview"
-                style="display: {{ printActiveAdminSidebarLink(referentielLink) ? 'block' : 'none' }};">
+            'app.admin.equipment', 'app.admin.structure.', 'app.admin.domain.', 'app.admin.period.index', 'app.admin.language.',
+            'app.admin.campus.', 'app_admin.achievement'] %}
+        {% if is_granted(['ROLE_ADMIN_ACTIVITY', 'ROLE_ADMIN_ACTIVITYTYPE', 'ROLE_ADMIN_ACTIVITYMODE', 'ROLE_ADMIN_CAMPUS',
+            'ROLE_ADMIN_DOMAIN', 'ROLE_ADMIN_EQUIPMENT', 'ROLE_ADMIN_LANGUAGE', 'ROLE_ADMIN_PERIOD', 'ROLE_ADMIN_STRUCTURE'
+        ]) %}
+            <li class="nav-item has-treeview {{ printActiveAdminSidebarLink(referentielLink) ? 'menu-open' }}">
+                <a href="#" class="nav-link {{ printActiveAdminSidebarLink(referentielLink) }}">
+                    <i class="nav-icon fas fa-book"></i>
+                    <p>
+                        Référentiel
+                        <i class="right fas fa-angle-left"></i>
+                    </p>
+                </a>
+                <ul class="nav nav-treeview"
+                    style="display: {{ printActiveAdminSidebarLink(referentielLink) ? 'block' : 'none' }};">
 
-                <li class="nav-item pl-2">
-                    <a href="{{ path('app_admin.achievement_index') }}"
-                       class="nav-link {{ printActiveAdminSidebarLink(['app_admin.achievement']) }}">
-                        <i class="fas fa-map-marker-alt nav-icon"></i>
-                        <p>
-                            Acquis critiques
-                        </p>
-                    </a>
-                </li>
-
-                {% set activityLink = ['app.admin.activity.', 'app.admin.activity_type.', 'app.admin.activity_mode.'] %}
-                {% if is_granted('ROLE_ADMIN_ACTIVITY') or is_granted('ROLE_ADMIN_ACTIVITYTYPE') or is_granted('ROLE_ADMIN_ACTIVITYMODE') %}
-                    <li class="nav-item pl-2 has-treeview {{ printActiveAdminSidebarLink(activityLink) ? 'menu-open' }}">
-                        <a href="#" class="nav-link {{ printActiveAdminSidebarLink(activityLink) }}">
-                            <i class="nav-icon fas fa-film"></i>
-                            <p>
-                                Activités
-                                <i class="right fas fa-angle-left"></i>
-                            </p>
-                        </a>
-                        <ul class="nav nav-treeview"
-                            style="display: {{ printActiveAdminSidebarLink(activityLink) ? 'block' : 'none' }};">
-                            {% if is_granted('ROLE_ADMIN_ACTIVITY') %}
-                                <li class="pl-3">
-                                    <a href="{{ path('app.admin.activity.index') }}"
-                                       class="nav-link {{ printActiveAdminSidebarLink(['app.admin.activity.']) }}">
-                                        <i class="fas fa-dot-circle nav-icon"></i>
-                                        <p>
-                                            Activités
-                                        </p>
-                                    </a>
-                                </li>
-                            {% endif %}
-                            {% if is_granted('ROLE_ADMIN_ACTIVITYTYPE') %}
-                                <li class="pl-3">
-                                    <a href="{{ path('app.admin.activity_type.index') }}"
-                                       class="nav-link {{ printActiveAdminSidebarLink(['app.admin.activity_type.']) }}">
-                                        <i class="fas fa-dot-circle nav-icon"></i>
-                                        <p>
-                                            Types
-                                        </p>
-                                    </a>
-                                </li>
-                            {% endif %}
-                            {% if is_granted('ROLE_ADMIN_ACTIVITYMODE') %}
-                                <li class="pl-3">
-                                    <a href="{{ path('app.admin.activity_mode.index') }}"
-                                       class="nav-link {{ printActiveAdminSidebarLink(['app_admin.mode_activity']) }}">
-                                        <i class="fas fa-dot-circle nav-icon"></i>
-                                        <p>
-                                            Modes
-                                        </p>
-                                    </a>
-                                </li>
-                            {% endif %}
-                        </ul>
-                    </li>
-                {% endif %}
-                {% if is_granted('ROLE_ADMIN_YEAR') %}
                     <li class="nav-item pl-2">
-                        <a href="{{ path('app.admin.year.index') }}"
-                           class="nav-link {{ printActiveAdminSidebarLink(['app.admin.year.']) }}">
-                            <i class="nav-icon fas fa-calendar"></i>
-                            <p>
-                                Années
-                            </p>
-                        </a>
-                    </li>
-                {% endif %}
-
-                {% if is_granted('ROLE_ADMIN_CAMPUS') %}
-                    <li class="nav-item pl-2">
-                        <a href="{{ path('app.admin.campus.index') }}"
-                           class="nav-link {{ printActiveAdminSidebarLink(['app.admin.campus.']) }}">
+                        <a href="{{ path('app_admin.achievement_index') }}"
+                           class="nav-link {{ printActiveAdminSidebarLink(['app_admin.achievement']) }}">
                             <i class="fas fa-map-marker-alt nav-icon"></i>
                             <p>
-                                Campus
+                                Acquis critiques
                             </p>
                         </a>
                     </li>
-                {% endif %}
 
-                {% if is_granted('ROLE_ADMIN_DOMAIN') %}
-                    <li class="nav-item pl-2">
-                        <a href="{{ path('app.admin.domain.index') }}"
-                           class="nav-link {{ printActiveAdminSidebarLink(['app.admin.domain.']) }}">
-                            <i class="fas fa-gem nav-icon"></i>
-                            <p>
-                                Domaines
-                            </p>
-                        </a>
-                    </li>
-                {% endif %}
+                    {% set activityLink = ['app.admin.activity.', 'app.admin.activity_type.', 'app.admin.activity_mode.'] %}
+                    {% if is_granted('ROLE_ADMIN_ACTIVITY') or is_granted('ROLE_ADMIN_ACTIVITYTYPE') or is_granted('ROLE_ADMIN_ACTIVITYMODE') %}
+                        <li class="nav-item pl-2 has-treeview {{ printActiveAdminSidebarLink(activityLink) ? 'menu-open' }}">
+                            <a href="#" class="nav-link {{ printActiveAdminSidebarLink(activityLink) }}">
+                                <i class="nav-icon fas fa-film"></i>
+                                <p>
+                                    Activités
+                                    <i class="right fas fa-angle-left"></i>
+                                </p>
+                            </a>
+                            <ul class="nav nav-treeview"
+                                style="display: {{ printActiveAdminSidebarLink(activityLink) ? 'block' : 'none' }};">
+                                {% if is_granted('ROLE_ADMIN_ACTIVITY') %}
+                                    <li class="pl-3">
+                                        <a href="{{ path('app.admin.activity.index') }}"
+                                           class="nav-link {{ printActiveAdminSidebarLink(['app.admin.activity.']) }}">
+                                            <i class="fas fa-dot-circle nav-icon"></i>
+                                            <p>
+                                                Activités
+                                            </p>
+                                        </a>
+                                    </li>
+                                {% endif %}
+                                {% if is_granted('ROLE_ADMIN_ACTIVITYTYPE') %}
+                                    <li class="pl-3">
+                                        <a href="{{ path('app.admin.activity_type.index') }}"
+                                           class="nav-link {{ printActiveAdminSidebarLink(['app.admin.activity_type.']) }}">
+                                            <i class="fas fa-dot-circle nav-icon"></i>
+                                            <p>
+                                                Types
+                                            </p>
+                                        </a>
+                                    </li>
+                                {% endif %}
+                                {% if is_granted('ROLE_ADMIN_ACTIVITYMODE') %}
+                                    <li class="pl-3">
+                                        <a href="{{ path('app.admin.activity_mode.index') }}"
+                                           class="nav-link {{ printActiveAdminSidebarLink(['app_admin.mode_activity']) }}">
+                                            <i class="fas fa-dot-circle nav-icon"></i>
+                                            <p>
+                                                Modes
+                                            </p>
+                                        </a>
+                                    </li>
+                                {% endif %}
+                            </ul>
+                        </li>
+                    {% endif %}
+                    {% if is_granted('ROLE_ADMIN_YEAR') %}
+                        <li class="nav-item pl-2">
+                            <a href="{{ path('app.admin.year.index') }}"
+                               class="nav-link {{ printActiveAdminSidebarLink(['app.admin.year.']) }}">
+                                <i class="nav-icon fas fa-calendar"></i>
+                                <p>
+                                    Années
+                                </p>
+                            </a>
+                        </li>
+                    {% endif %}
 
-                {% if is_granted('ROLE_ADMIN_EQUIPMENT') %}
-                    <li class="nav-item pl-2">
-                        <a href="{{ path('app.admin.equipment.index') }}"
-                           class="nav-link {{ printActiveAdminSidebarLink(['app.admin.equipment.']) }}">
-                            <i class="nav-icon fas fa-drafting-compass"></i>
-                            <p>
-                                Equipements
-                            </p>
-                        </a>
-                    </li>
-                {% endif %}
+                    {% if is_granted('ROLE_ADMIN_CAMPUS') %}
+                        <li class="nav-item pl-2">
+                            <a href="{{ path('app.admin.campus.index') }}"
+                               class="nav-link {{ printActiveAdminSidebarLink(['app.admin.campus.']) }}">
+                                <i class="fas fa-map-marker-alt nav-icon"></i>
+                                <p>
+                                    Campus
+                                </p>
+                            </a>
+                        </li>
+                    {% endif %}
 
-                {% if is_granted('ROLE_ADMIN_LANGUAGE') %}
-                    <li class="nav-item pl-2">
-                        <a href="{{ path('app.admin.language.index') }}"
-                           class="nav-link {{ printActiveAdminSidebarLink(['app_admin.language.']) }}">
-                            <i class="fas fa-language nav-icon"></i>
-                            <p>
-                                Langues
-                            </p>
-                        </a>
-                    </li>
-                {% endif %}
+                    {% if is_granted('ROLE_ADMIN_DOMAIN') %}
+                        <li class="nav-item pl-2">
+                            <a href="{{ path('app.admin.domain.index') }}"
+                               class="nav-link {{ printActiveAdminSidebarLink(['app.admin.domain.']) }}">
+                                <i class="fas fa-gem nav-icon"></i>
+                                <p>
+                                    Domaines
+                                </p>
+                            </a>
+                        </li>
+                    {% endif %}
 
-                {% if is_granted('ROLE_ADMIN_PERIOD') %}
-                    <li class="nav-item pl-2">
-                        <a href="{{ path('app.admin.period.index') }}"
-                           class="nav-link {{ printActiveAdminSidebarLink(['app.admin.period.']) }}">
-                            <i class="nav-icon fas fa-calendar-week"></i>
-                            <p>
-                                Périodes
-                            </p>
-                        </a>
-                    </li>
-                {% endif %}
+                    {% if is_granted('ROLE_ADMIN_EQUIPMENT') %}
+                        <li class="nav-item pl-2">
+                            <a href="{{ path('app.admin.equipment.index') }}"
+                               class="nav-link {{ printActiveAdminSidebarLink(['app.admin.equipment.']) }}">
+                                <i class="nav-icon fas fa-drafting-compass"></i>
+                                <p>
+                                    Equipements
+                                </p>
+                            </a>
+                        </li>
+                    {% endif %}
 
-                <li class="nav-item pl-2">
-                    <a href="{{ path('app_admin.structure_index') }}"
-                       class="nav-link {{ printActiveAdminSidebarLink(['app_admin.structure']) }}">
-                        <i class="nav-icon fas fa-building"></i>
-                        <p>
-                            Structures
-                        </p>
-                    </a>
-                </li>
-            </ul>
-        </li>
+                    {% if is_granted('ROLE_ADMIN_LANGUAGE') %}
+                        <li class="nav-item pl-2">
+                            <a href="{{ path('app.admin.language.index') }}"
+                               class="nav-link {{ printActiveAdminSidebarLink(['app.admin.language.']) }}">
+                                <i class="fas fa-language nav-icon"></i>
+                                <p>
+                                    Langues
+                                </p>
+                            </a>
+                        </li>
+                    {% endif %}
+
+                    {% if is_granted('ROLE_ADMIN_PERIOD') %}
+                        <li class="nav-item pl-2">
+                            <a href="{{ path('app.admin.period.index') }}"
+                               class="nav-link {{ printActiveAdminSidebarLink(['app.admin.period.']) }}">
+                                <i class="nav-icon fas fa-calendar-week"></i>
+                                <p>
+                                    Périodes
+                                </p>
+                            </a>
+                        </li>
+                    {% endif %}
+
+                    {% if is_granted('ROLE_ADMIN_STRUCTURE') %}
+                        <li class="nav-item pl-2">
+                            <a href="{{ path('app.admin.structure.index') }}"
+                               class="nav-link {{ printActiveAdminSidebarLink(['app.admin.structure.']) }}">
+                                <i class="nav-icon fas fa-building"></i>
+                                <p>
+                                    Structures
+                                </p>
+                            </a>
+                        </li>
+                    {% endif %}
+                </ul>
+            </li>
+        {% endif %}
 
         {% set importLink = ['app_admin_import_csv_course_info', 'app_admin_import_csv_permission', 'app_admin_import_csv_user'] %}
         <li class="nav-item has-treeview {{ printActiveAdminSidebarLink(importLink) ? 'menu-open' }}">
