--- a/app/Resources/views/course_info/layout.html.twig
+++ b/app/Resources/views/course_info/layout.html.twig
@@ -81,7 +81,7 @@
                     </a>
                 </li>
                 <li class="nav-item menu-tab has-treeview">
-                    <a class="nav-link" href="{{ path('course_info_index', { 'id': courseInfo.id }) }}"
+                    <a class="nav-link" href="{{ path('app.course_info.info.index', { 'id': courseInfo.id }) }}"
                        id="menu-info">
                         <i class="fas fa-info-circle"></i>
                         <p>Informations pratiques</p>
