--- a/app/Resources/views/course_info/objectives_course/form/critical_achievement.html.twig
+++ b/app/Resources/views/course_info/objectives_course/form/critical_achievement.html.twig
@@ -1,4 +1,4 @@
-{{ form_start(form, {'attr': {'class': 'modal-action-form', 'data-action-url': path('app.course_info.critical_achievement.create',
+{{ form_start(form, {'attr': {'class': 'modal-action-form', 'data-action-url': path('app.course_info.objectives.critical_achievement.add',
     {'id': courseInfo.id }), 'data-card': 'card-critical_achievement'}}) }}
 {{ form_errors(form) }}
 <div class="row mt-3">
