--- a/app/Resources/views/course_info/objectives_course/view/critical_achievement.html.twig
+++ b/app/Resources/views/course_info/objectives_course/view/critical_achievement.html.twig
@@ -39,7 +39,7 @@
                         <button type="button"
                                 class="btn btn-primary rounded modal-action"
                                 data-action-title="Ajouter un acquis"
-                                data-action-url="{{ path('app.course_info.learning_achievement.create', {'id': criticalAchievement.id }) }}">
+                                data-action-url="{{ path('app.course_info.critical_achievement.learning_achievement.add', {'id': criticalAchievement.id }) }}">
                             Ajouter un acquis
                         </button>
                     </div>
