--- a/app/Resources/views/course_info/info/form/info.html.twig
+++ b/app/Resources/views/course_info/info/form/info.html.twig
@@ -15,11 +15,11 @@
 </div>
 <div class="mt-2">
     <button type="submit" class="focus-submit btn btn-primary submit rounded"
-            data-url="{{ path('course_info_convenient_view', {'id': courseInfo.id, 'action': 'submit' }) }}">
+            data-url="{{ path('app.course_info.info.info', {'id': courseInfo.id, 'action': 'submit' }) }}">
         Sauvegarder
     </button>
     <button type="button" class="focus-cancel btn btn-secondary rounded"
-            data-url="{{ path('course_info_convenient_view', {'id': courseInfo.id, 'action': 'cancel' }) }}">
+            data-url="{{ path('app.course_info.info.info', {'id': courseInfo.id, 'action': 'cancel' }) }}">
         Annuler
     </button>
 </div>
