--- a/app/Resources/views/course_info/objectives_course/form/achievement.html.twig
+++ b/app/Resources/views/course_info/objectives_course/form/achievement.html.twig
@@ -1,4 +1,4 @@
-{{ form_start(form, {'attr': {'class': 'modal-action-form', 'data-action-url': path('app.course_info.achievement.create',
+{{ form_start(form, {'attr': {'class': 'modal-action-form', 'data-action-url': path('app.course_info.objectives.achievement.add',
     {'id': courseInfo.id }), 'data-card': 'card-achievement'}}) }}
 {{ form_errors(form) }}
 <div class="row mt-3">
